--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -20,6 +20,8 @@
     <sys:String x:Key="LOCSucessStoryEnableGog">Activier les succès GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Activier les succès Origin</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Inclure les jeux cachés</sys:String>
+
     <sys:String x:Key="LOCSucessStoryIsAsc">Ascendant</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Manipulation de la base de données</sys:String>
