--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -20,6 +20,8 @@
     <sys:String x:Key="LOCSucessStoryEnableGog">Habilitar logros de GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Habilitar logros de Origin</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Incluir juegos ocultos</sys:String>
+
     <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Database manipulation</sys:String>
