--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -21,6 +21,8 @@
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Habilitar logros de Origin</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Incluir juegos ocultos</sys:String>
+    <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
+    <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphic with game unlocked achievements by month</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
 
@@ -69,6 +71,8 @@
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Progresión</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Todos los logros desbloqueados por mes</sys:String>
+    <sys:String x:Key="LOCSucessStoryGraphicTitleALLDay">All achievements unlocked by day</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Logros desbloqueados por mes</sys:String>
+    <sys:String x:Key="LOCSucessStoryGraphicTitleDay">Achievements unlocked by day</sys:String>
     
 </ResourceDictionary>
