--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -50,6 +50,9 @@
     <sys:String x:Key="LOCSucessStoryIntegrationButton">Add button</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationButtonDetails">Add button with details</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationButtonHeader">Add button in window</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Show progress bar</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">With indicator</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">With percent</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
 
