--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -50,6 +50,9 @@
     <sys:String x:Key="LOCSucessStoryIntegrationButton">Ajouter un bouton</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationButtonDetails">Ajouter un bouton avec détails</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationButtonHeader">Ajouter un bouton dans la fenêtre</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Afficher une barre de progression</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Avec indicateur</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">Avec pourcentage</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de données des succès a bien été réinitialisées.</sys:String>
 
